[Azure Pipeline] Run tests

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,3 +37,5 @@ steps:
     downloadType: 'single'
     artifactName: 'bin'
     downloadPath: '$(System.ArtifactsDirectory)'
+
+- powershell: .\test.ps1
